@@ -172,6 +172,8 @@
 			<FUNCTION>while</FUNCTION>
 			<FUNCTION>if</FUNCTION>
 			<FUNCTION>}else</FUNCTION>
+			<FUNCTION>}else{</FUNCTION>
+			<FUNCTION>if(</FUNCTION>
 			<FUNCTION>else</FUNCTION>
 			<FUNCTION>break</FUNCTION>
 			
